--- a/playmodule/src/test/resources/cache.conf
+++ b/playmodule/src/test/resources/cache.conf
@@ -1,10 +1,10 @@
-octopus.cache.factories = {
-  guava: de.zalando.cachecool.GuavaCacheFactory
-  redis: de.zalando.cachecool.RedisCacheFactory
-  multi-level: de.zalando.cachecool.MultilevelCacheFactory
+cachecool.cache.factories = {
+  guava: de.zalando.cachecool.GuavaCachecoolFactory
+  redis: de.zalando.cachecool.RedisCachecoolFactory
+  multi-level: de.zalando.cachecool.MultilevelCachecoolFactory
 }
 
-octopus.caches = {
+cahchecool.caches = {
   memory: {
     factory: "guava"
     config: {
