--- a/playmodule/src/test/resources/application.conf
+++ b/playmodule/src/test/resources/application.conf
@@ -1,3 +1,3 @@
-play.modules.enabled += "de.zalando.cachecool.playmodule.OctopusCacheModule"
+play.modules.enabled += "de.zalando.cachecool.playmodule.CachecoolModule"
 
 include "cache.conf"
